# vo-cutouts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Dockerfile.worker  Makefile  README.md  README.rst  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml  periodic-ci.yaml
alembic/: README.md  docker-compose.yaml  env.py
alembic/versions/: 20240912_1902_5ab72a20365b_initial_uws_schema.py
changelog.d/: 20240216_134725_rra_DM_42937.md  20240216_150548_rra_DM_42937.md  20240216_171711_rra_DM_42937.md  20240219_145935_rra_DM_42937.md  20240411_104926_rra_DM_43846.md  20240606_103703_rra_DM_44606.md  20240606_141501_rra_DM_44606.md  20240607_143229_rra_DM_44720.md  20240607_161544_rra_DM_44720.md  20240607_162437_rra_DM_44720.md  20240610_132302_rra_DM_44720.md  20240613_185120_rra_DM_44763.md  20240613_201328_rra_DM_44763.md  20240614_151231_rra_DM_44763.md  20240628_094800_david.irving_DM_44503.md  20240701_153719_david.irving_DM_45088.md  20240705_101725_rra_DM_45132.md  20240708_165945_rra_DM_45138.md  20240709_104843_rra_DM_45138.md  20240709_134925_david.irving_DM_44509.md  20240710_144457_rra_DM_45138.md  20240710_155859_rra_DM_45138.md  20240711_135843_rra_DM_45138.md  20240712_161212_rra_DM_45138.md  20240715_143650_rra_DM_45138.md  20240715_155338_rra_DM_45138.md  20240715_164613_rra_DM_45138.md  20240715_170552_rra_DM_45138.md  20240819_145310_rra_DM_45824.md  20240913_143738_rra_DM_46034.md  20241021_232057_steliosvoutsinas_DM_47027.md  20241210_140315_rra_DM_47986.md  20241211_181509_rra_DM_47986.md  20250616_132907_rra_DM_51420.md  20250623_135551_rra_DM_51504.md  20250821_095817_rra_DM_52238.md  20250825_161605_rra_DM_52310.md  20251015_172619_rra_DM_52929.md  20251016_074617_rra_DM_52929.md  20251201_092825_rra_DM_52929.md
requirements/: dev.in  dev.txt  main.in  main.txt  tox.txt
scripts/: install-base-packages.sh  install-dependency-packages.sh  install-worker-packages.sh  install-worker.sh  start-frontend.sh  start-worker.sh
src/vocutouts/: __init__.py  actors.py  broker.py  cli.py  config.py  dependencies.py  exceptions.py  main.py  policy.py  worker.py  workers.py
src/vocutouts/dependencies/: auth.py
src/vocutouts/handlers/: external.py  internal.py
src/vocutouts/models/: cutout.py  index.py  parameters.py  request.py  stencils.py
src/vocutouts/models/domain/: cutout.py
src/vocutouts/uws/: app.py  butler.py  config.py  constants.py  database.py  dependencies.py  errors.py  exceptions.py  handlers.py  jobs.py  middleware.py  models.py  policy.py  responses.py  results.py  service.py  storage.py  tasks.py  utils.py  uwsworker.py  workers.py
src/vocutouts/uws/schema/: __init__.py  job.py  job_parameter.py  job_result.py
src/vocutouts/uws/templates/: availability.xml  error.xml  job.xml  jobs.xml  parameters.xml  results.xml
src/vocutouts/workers/: cutout.py  uws.py
tests/: conftest.py
tests/handlers/: async_test.py  error_test.py  external_test.py  internal_test.py  sync_test.py
tests/models/: parameters_test.py  request_test.py
tests/models/domain/: cutout_test.py
tests/support/: uws.py
tests/uws/: conftest.py  errors_test.py  exceptions_test.py  job_api_test.py  job_error_test.py  job_list_test.py  long_polling_test.py  policy_test.py  workers_test.py
